# serverless-bedrock-agentcore-plugin

./: .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
examples/browser-code-interpreter/: Dockerfile  agent.py  pyproject.toml  serverless.yml
examples/full-stack-agent/: .dockerignore  Dockerfile  agent.py  pyproject.toml  serverless.yml
examples/full-stack-agent/handlers/: weather.py
examples/google-adk/: Dockerfile  agent.py  pyproject.toml  serverless.yml
examples/memory-strategies/: serverless-simple.yml  serverless.yml
examples/strands-basic/: README.md  agent.py  serverless.yml
examples/strands-cognito-jwt/: README.md  agent.py  pyproject.toml  serverless.yml
examples/strands-memory/: README.md  agent.py  pyproject.toml  serverless.yml
examples/strands-oauth-identity/: .dockerignore  README.md  agent.py  pyproject.toml  serverless.yml
examples/strands-streaming/: README.md  agent.py  pyproject.toml  serverless.yml
src/: index.js
src/compilers/: browser.js  codeInterpreter.js  gateway.js  gatewayTarget.js  index.js  memory.js  runtime.js  runtimeEndpoint.js  workloadIdentity.js
src/docker/: builder.js
src/iam/: policies.js
src/utils/: index.js  naming.js  tags.js
src/validators/: schema.js
test/fixtures/browser/: serverless.yml
test/fixtures/code-interpreter/: serverless.yml
test/integration/: browser.test.js  codeInterpreter.test.js  memory.test.js  runtime.test.js  workloadIdentity.test.js
test/utils/: runServerless.js
(+18 files in other folders)
